compiler/internal/frontend/testdata/parser/positive/types/generics.tetra
struct Box<T>:
    value: T

func id<T>(x: T) -> T:
    return x

func main() -> Int:
    let b: Box<Int> = Box<Int>{value: id(42)}
    return b.value
