compiler/internal/frontend/testdata/parser/negative/protocols.tetra
protocol P:
    func id<T>(x: T) -> T
